Add MathJax support

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 ---
 layout: home
 author_profile: true
+use_mathjax: true
 ---
 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec justo ligula, euismod sit amet fringilla eleifend, tempus eu orci. Pellentesque blandit nunc sem. Vivamus a velit metus. Pellentesque euismod elit enim, sed eleifend metus malesuada et. Curabitur est urna, lobortis a dui vitae, vestibulum maximus erat. Proin rutrum lorem justo. Donec non ex vel erat accumsan laoreet. Donec massa libero, congue vel commodo quis, ornare quis tellus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur iaculis tortor vitae rhoncus bibendum. Donec fringilla vehicula dolor, a interdum quam.
 
 Donec eu nisl vitae justo imperdiet accumsan nec in risus. Vestibulum sed erat ut lectus lacinia vehicula. Phasellus rhoncus tincidunt diam id molestie. Suspendisse potenti. Nulla erat lacus, mattis non tempor sed, consequat at mi. In hac habitasse platea dictumst. Ut molestie, lectus eu vulputate finibus, dolor risus lobortis nunc, sit amet volutpat ipsum elit quis turpis. Ut mollis nisl lectus, non tristique enim fermentum sed. Vivamus laoreet condimentum nisi, a tincidunt odio dapibus vel. Aenean venenatis congue ex sit amet luctus. In laoreet enim sodales sollicitudin luctus. Aliquam dictum sollicitudin elit, vitae tincidunt tellus egestas nec.
 
 Proin sit amet vulputate dolor. Ut cursus suscipit neque, vel dignissim urna mollis ac. Pellentesque mollis, justo eu elementum ultricies, mauris lorem luctus nunc, tempus bibendum lacus neque vel eros. Fusce sollicitudin lacus eu nisi fermentum, sed mattis mauris egestas. In vitae mauris ac magna auctor blandit. Suspendisse potenti. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla fringilla tincidunt dolor congue viverra.
+
+$$\sum_{k=1}^n\frac1k-\ln(n)\xrightarrow[n\to+\infty]{}\gamma$$
 
 In consectetur in mauris iaculis iaculis. Mauris gravida sem sapien, ac congue sapien pellentesque quis. Proin tincidunt mauris enim, in porta justo interdum sit amet. Nam tincidunt orci vitae eros egestas, in ultrices risus congue. Donec blandit sapien ex, non faucibus odio ultrices et. Nullam porta sodales justo, vel pharetra metus bibendum sed. Nam porttitor venenatis ante vel varius. Suspendisse ut neque elit. In ac ipsum volutpat eros faucibus molestie. Morbi venenatis mi sed ipsum convallis volutpat. Mauris at facilisis metus. Sed a commodo ex, sed fermentum nisl. Etiam libero turpis, tincidunt mattis iaculis non, suscipit sit amet arcu. Integer iaculis iaculis elit ut tempus. Ut ultrices, turpis nec imperdiet consectetur, lectus odio tempus dui, et molestie lorem orci lobortis urna. Praesent aliquet pulvinar tortor, ullamcorper posuere eros viverra at.
 
